# pytorch-practice

./: .gitignore  cache_fn_decoractor.py  dataloader_cifar10_animal_bird.py  deep-residual-cifar10.py  enumerator-example.py  fc_gan.py  pyproject.toml  seaborn-example.py  simple-nn-linear.py  simple-nn-sequential.py  simple-vision-cifar10.py  simple-vision-cnn-cifar10.py  simple-vision-dnn-cifar10.py  simple-wx-b-no-optimizer.py  simple-wx-b-with-optimizer.py
dcgan/: README.md  model.py  train.py
notebooks/: vast-ai-gpu-test-run.ipynb
pix2pix/: README.md  checkpoint.py  datasets.py  train.py  validate.py
pix2pix/model/: discriminator.py  generator.py
wgan/: README.md  model.py  train.py  utils.py
wgan-conditional/: README.md  model.py  train.py  utils.py
