[tool.poetry]
name = "pytorch-practice"
version = "0.1.0"
description = ""
authors = ["Phil Whelan <phil123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
matplotlib = "^3.3.3"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
