[tool.poetry]
name = "pytorch-practice"
version = "0.1.0"
description = ""
authors = ["Phil Whelan <phil123@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
torch = "^1.8.1"
matplotlib = "^3.3.4"
torchvision = "^0.9.1"
seaborn = "^0.11.1"
tensorboard = "^2.4.1"
albumentations = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
